--- a/frontend/tree/src/App.css
+++ b/frontend/tree/src/App.css
@@ -34,6 +34,9 @@ button {
 button:hover {
   cursor: pointer;
 }
+h1 {
+  text-align: center;
+}
 /*#root {
   max-width: 1280px;
   margin: 0 auto;
